force-app/main/default/objects/Brand_Quote__c/Brand_Quote__c.object-meta.xml
<CustomObject>
    <description>Buy Quote to Purchase from Brands. Sell Quotes to Sell to Dispensaries</description>
    <label>Brand Quote</label>
    <nameField>
        <displayFormat>BQ-{0000000000}</displayFormat>
        <label>Brand Quote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>