force-app/main/default/objects/Brand_Quote__c/fields/Apply_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Apply_Excise_Tax__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Include Excise tax calculation</description>
    <label>Apply Excise Tax ?</label>
    <type>Checkbox</type>
</CustomField>