force-app/main/default/objects/Brand_Quote__c/fields/BQ_Effective_To__c.field-meta.xml
<CustomField>
    <fullName>BQ_Effective_To__c</fullName>
    <formula>TODAY() +90</formula>
    <label>BQ Effective To</label>
    <type>Date</type>
</CustomField>