force-app/main/default/objects/Brand_Quote__c/fields/Customer_PO_or_Quote__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_or_Quote__c</fullName>
    <inlineHelpText>For Sell Quote, input Leaflink Order ID, or Retail Delivery Ticket. For Buy Quote, input Sell Quote or TSM</inlineHelpText>
    <label>Order or Service #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>