force-app/main/default/objects/Brand_Quote__c/fields/Distributor_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Acceptance_Date__c</fullName>
    <inlineHelpText>Date in which Distributor Agreed to Buy Quote</inlineHelpText>
    <label>Distributor Acceptance Date</label>
    <type>DateTime</type>
</CustomField>