force-app/main/default/objects/Brand_Quote__c/fields/Distributor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Brand Quotes (Distributor Contact)</relationshipLabel>
    <relationshipName>Brand_Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>