force-app/main/default/objects/Brand_Quote__c/fields/Distributor_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Distributor_License_Expiration_Date__c</fullName>
    <formula>Distributor_License__r.License_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date in which license will expire</inlineHelpText>
    <label>Distributor License Expiration Date</label>
    <type>Date</type>
</CustomField>