force-app/main/default/objects/Brand_Quote__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distributor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Quotes as Distributor</relationshipLabel>
    <relationshipName>Brand_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>