force-app/main/default/objects/Brand_Quote__c/fields/Factoring_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factoring Assignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Quotes as Factoring Assignee</relationshipLabel>
    <relationshipName>Brand_Quotes4</relationshipName>
    <type>Lookup</type>
</CustomField>