force-app/main/default/objects/Brand_Quote__c/fields/Factoring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factoring Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Brand Quotes (Factoring Contact)</relationshipLabel>
    <relationshipName>Brand_Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>