force-app/main/default/objects/Brand_Quote__c/fields/KP_Ready_for_Delivery__c.field-meta.xml
<CustomField>
    <fullName>KP_Ready_for_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ready for Delivery from Kushy punch API.</description>
    <inlineHelpText>Related to Kushy Punch API data sync.</inlineHelpText>
    <label>KP Ready for Delivery</label>
    <type>Checkbox</type>
</CustomField>