force-app/main/default/objects/Brand_Quote__c/fields/Kushy_Punch_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Kushy_Punch_Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Kushy Punch Order Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>