force-app/main/default/objects/Brand_Quote__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <inlineHelpText>Last Payment Date from Invoice PB</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>