force-app/main/default/objects/Brand_Quote__c/fields/Listing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Listing_Fee__c</fullName>
    <label>Listing Fee</label>
    <summarizedField>Brand_Quote_Line__c.Listing_Fee__c</summarizedField>
    <summaryFilterItems>
        <field>Brand_Quote_Line__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Brand_Quote_Line__c.Brand_Quote_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>