force-app/main/default/objects/Brand_Quote__c/fields/Local_Cannabis_Business_Tax__c.field-meta.xml
<CustomField>
    <fullName>Local_Cannabis_Business_Tax__c</fullName>
    <formula>IF( Delivery_City__c = &quot;San Diego&quot;, (Total_Product_Price__c * 0.32) *0.08, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Cannabis Business Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>