force-app/main/default/objects/Brand_Quote__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Quotes as Ownership</relationshipLabel>
    <relationshipName>Brand_Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>