force-app/main/default/objects/Brand_Quote__c/fields/Planned_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Ship_Date__c</fullName>
    <inlineHelpText>Planned Ship Date is based on Receiver Acceptance Date. Sell Quote approved before 10:00AM PST will ship next day. Sell Quotes approved after 10:00AM will ship next 48 hours.</inlineHelpText>
    <label>Planned Ship Date</label>
    <type>Date</type>
</CustomField>