force-app/main/default/objects/Brand_Quote__c/fields/PO_Created__c.field-meta.xml
<CustomField>
    <fullName>PO_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Created</label>
    <type>Checkbox</type>
</CustomField>