force-app/main/default/objects/Brand_Quote__c/fields/Receiver_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Acceptance_Date__c</fullName>
    <inlineHelpText>Date in which Receiver Accepted Sell Quote</inlineHelpText>
    <label>Receiver Acceptance Date</label>
    <type>DateTime</type>
</CustomField>