force-app/main/default/objects/Brand_Quote__c/fields/Receiver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Receiver_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Brand Quotes (Receiver Contact)</relationshipLabel>
    <relationshipName>Brand_Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>