force-app/main/default/objects/Brand_Quote__c/fields/Receiver_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_First_Name__c</fullName>
    <description>Used in Conga email tempaltes. DO NOT DELETE</description>
    <formula>Receiver_Contact__r.FirstName</formula>
    <label>Receiver First Name</label>
    <type>Text</type>
</CustomField>