force-app/main/default/objects/Brand_Quote__c/fields/Receiver_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Receiver_License_Number__c</fullName>
    <formula>Receiver_License__r.License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>License Number is State Granted License Number to Operate.</inlineHelpText>
    <label>Receiver License Number</label>
    <type>Text</type>
</CustomField>