force-app/main/default/objects/Brand_Quote__c/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Receiver Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Quotes as Receiver</relationshipLabel>
    <relationshipName>Brand_Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>