force-app/main/default/objects/Brand_Quote__c/fields/Requested_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Transfer_Date__c</fullName>
    <label>Requested Transfer Date</label>
    <type>Date</type>
</CustomField>