force-app/main/default/objects/Brand_Quote__c/fields/Route_Miles__c.field-meta.xml
<CustomField>
    <fullName>Route_Miles__c</fullName>
    <formula>IF( RecordType.Name = &apos;Sell Quote&apos; ,(Distance(Distributor_License__r.License_Location__c , Receiver_License__r.License_Location__c , &apos;mi&apos;) * 1.3),(Distance(Distributor_License__r.License_Location__c , Supplier_License__r.License_Location__c , &apos;mi&apos;) * 1.3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Miles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>