force-app/main/default/objects/Brand_Quote__c/fields/Sales_Origin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Origin__c</fullName>
    <label>Sales Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Origin</valueSetName>
    </valueSet>
</CustomField>