force-app/main/default/objects/Brand_Quote__c/fields/Service_Ticket_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Ticket_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Ticket Line</label>
    <referenceTo>Service_Ticket_Line__c</referenceTo>
    <relationshipLabel>Brand Quotes</relationshipLabel>
    <relationshipName>Brand_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>