force-app/main/default/objects/Brand_Quote__c/fields/Ship_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Confirmation_Date__c</fullName>
    <inlineHelpText>Field is auto updated from Shipping Manifest. If Service Quote, updated from PWO as date completed.</inlineHelpText>
    <label>Ship Confirmation Date</label>
    <type>Date</type>
</CustomField>