force-app/main/default/objects/Brand_Quote__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Brand Quotes</relationshipLabel>
    <relationshipName>Brand_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>