force-app/main/default/objects/Brand_Quote__c/fields/Supplier_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Acceptance_Date__c</fullName>
    <inlineHelpText>Date in which Supplier Agreed to Buy Quote</inlineHelpText>
    <label>Supplier Acceptance Date</label>
    <type>DateTime</type>
</CustomField>