force-app/main/default/objects/Brand_Quote__c/fields/Supplier_Address__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Address__c</fullName>
    <formula>Supplier_License__r.License_Address__c</formula>
    <inlineHelpText>Address is from License</inlineHelpText>
    <label>Supplier Address</label>
    <type>Text</type>
</CustomField>