force-app/main/default/objects/Brand_Quote__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Brand Quotes</relationshipLabel>
    <relationshipName>Brand_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>