force-app/main/default/objects/Brand_Quote__c/fields/Supplier_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplier_ID__c</fullName>
    <formula>Supplier_Name__r.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier ID</label>
    <type>Text</type>
</CustomField>