force-app/main/default/objects/Brand_Quote__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Quotes as Supplier</relationshipLabel>
    <relationshipName>Brand_Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>