force-app/main/default/objects/Brand_Quote__c/fields/SUPPRESS_PO__c.field-meta.xml
<CustomField>
    <fullName>SUPPRESS_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when PO is not required.</inlineHelpText>
    <label>SUPPRESS PO</label>
    <type>Checkbox</type>
</CustomField>