force-app/main/default/objects/Brand_Quote__c/fields/Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sample record for internal purpose. Add this field in reports filter to ignore the transaction details.</description>
    <inlineHelpText>Sample record for internal purpose. Add this field in reports filter to ignore the transaction details.</inlineHelpText>
    <label>Test Record ?</label>
    <type>Checkbox</type>
</CustomField>