force-app/main/default/objects/Brand_Quote__c/fields/Total_Cancelled_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancelled_Lines__c</fullName>
    <label>Total Cancelled Lines</label>
    <summaryFilterItems>
        <field>Brand_Quote_Line__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Brand_Quote_Line__c.Brand_Quote_Number__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>