force-app/main/default/objects/Brand_Quote__c/fields/Total_Excise_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Excise_Tax_Amount__c</fullName>
    <label>Total Excise Tax Amount</label>
    <summarizedField>Brand_Quote_Line__c.Excise_Tax_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Brand_Quote_Line__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Brand_Quote_Line__c.Brand_Quote_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>