force-app/main/default/objects/Brand_Quote__c/fields/Total_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Profit__c</fullName>
    <formula>Total_Product_Price__c -  Total_Product_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Profit is Cost Minus Price</inlineHelpText>
    <label>Total Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>