force-app/main/default/objects/Brand_Quote__c/fields/Total_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Items__c</fullName>
    <inlineHelpText>Count of Child Line Items</inlineHelpText>
    <label>Total Line Items</label>
    <summaryFilterItems>
        <field>Brand_Quote_Line__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Brand_Quote_Line__c.Brand_Quote_Number__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>