force-app/main/default/objects/Brand_Quote__c/fields/Total_Pick_Pack_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Pick_Pack_Fee__c</fullName>
    <label>Total Pick &amp; Pack Fee</label>
    <summarizedField>Brand_Quote_Line__c.Pick_Pack_Fee__c</summarizedField>
    <summaryForeignKey>Brand_Quote_Line__c.Brand_Quote_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>