force-app/main/default/objects/Brand_Quote__c/fields/Total_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Price__c</fullName>
    <label>Total Product Price</label>
    <summarizedField>Brand_Quote_Line__c.Line_Total_Retail_Wholesale_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Brand_Quote_Line__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Brand_Quote_Line__c.Brand_Quote_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>