force-app/main/default/objects/Brand_Quote__c/fields/Total_Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Quoted_Price__c</fullName>
    <formula>Total_Excise_Tax_Amount__c +  Total_Product_Price__c +  Local_Cannabis_Business_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Price + Excise Tax</inlineHelpText>
    <label>Total Quoted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>