force-app/main/default/objects/Brand_Quote__c/fields/Total_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lbs__c</fullName>
    <label>Total Weight (lbs)</label>
    <summarizedField>Brand_Quote_Line__c.Total_Weight_lbs__c</summarizedField>
    <summaryForeignKey>Brand_Quote_Line__c.Brand_Quote_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>