force-app/main/default/objects/Brand_Quote__c/recordTypes/Buy_Quote.recordType-meta.xml
<RecordType>
    <fullName>Buy_Quote</fullName>
    <active>true</active>
    <description>Used for incoming inventory from Brands, Sites, Internal Packaging, Consumables, Bulk Buys</description>
    <label>Buy Quote</label>
</RecordType>