force-app/main/default/objects/Brand_Quote__c/recordTypes/Lab_Quote.recordType-meta.xml
<RecordType>
    <fullName>Lab_Quote</fullName>
    <active>true</active>
    <description>Used for lab sampling, No Invoice, No Purchase Order</description>
    <label>Lab Quote</label>
</RecordType>