force-app/main/default/objects/Brand_Quote__c/recordTypes/Sell_Quote.recordType-meta.xml
<RecordType>
    <fullName>Sell_Quote</fullName>
    <active>true</active>
    <description>Used for selling to Receiver, Invoice and Purchase Order will be issued to Brand or Lab</description>
    <label>Sell Quote</label>
</RecordType>