force-app/main/default/objects/Brand_Quote__c/recordTypes/Service_Quote.recordType-meta.xml
<RecordType>
    <fullName>Service_Quote</fullName>
    <active>true</active>
    <description>Used for packaging and transport services, No Purchase Order</description>
    <label>Service Quote</label>
</RecordType>