force-app/main/default/objects/Brand_Quote__c/recordTypes/Transfer_Quote.recordType-meta.xml
<RecordType>
    <fullName>Transfer_Quote</fullName>
    <active>true</active>
    <description>Used for transferring to receiver, No Invoice, No Purchase Order</description>
    <label>Transfer Quote</label>
</RecordType>