force-app/main/default/objects/Brand_Quote__c/listViews/X1_Draft_or_Submitted.listView-meta.xml
<ListView>
    <fullName>X1_Draft_or_Submitted</fullName>
    <columns>RECORDTYPE</columns>
    <columns>BQ_Status__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Receiver_Name__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Ship_Confirmation_Date__c</columns>
    <columns>Total_Line_Items__c</columns>
    <columns>Total_Product_Price__c</columns>
    <columns>Total_Excise_Tax_Amount__c</columns>
    <columns>Total_Quoted_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BQ_Status__c</field>
        <operation>equals</operation>
        <value>Submitted,Draft</value>
    </filters>
    <label>1. Pending Submit</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>